; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_mk_timer.c_mk_timer_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_mk_timer.c_mk_timer_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mk_timer_zone = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [9 x i8] c"mk_timer\00", align 1
@Z_NOENCRYPT = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mk_timer_init() #0 {
  %1 = alloca i32, align 4
  store i32 4, i32* %1, align 4
  %2 = load i32*, i32** @mk_timer_zone, align 8
  %3 = icmp ne i32* %2, null
  %4 = xor i1 %3, true
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load i32, i32* %1, align 4
  %8 = load i32, i32* %1, align 4
  %9 = mul nsw i32 4096, %8
  %10 = load i32, i32* %1, align 4
  %11 = mul nsw i32 16, %10
  %12 = call i32* @zinit(i32 %7, i32 %9, i32 %11, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32* %12, i32** @mk_timer_zone, align 8
  %13 = load i32*, i32** @mk_timer_zone, align 8
  %14 = load i32, i32* @Z_NOENCRYPT, align 4
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @zone_change(i32* %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @zinit(i32, i32, i32, i8*) #1

declare dso_local i32 @zone_change(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
